# freivalds

./: Cargo.toml  README.md
src/: main.rs
src/testdata/: a.txt  b.txt  c.txt  two_by_two.txt
